Find name in publications

--- a/_config.yml
+++ b/_config.yml
@@ -195,7 +195,7 @@ jekyll-archives:
 scholar:
 
   last_name: Hall
-  first_name: [George, T.]
+  first_name: ["George T", "George"]
 
   style: apa
   locale: en
