Fix google scholar link

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ github_username: george-hall-ucl # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: G_T_Hall # your Twitter handle
 linkedin_username: george-hall-437702125 # your LinkedIn user name
-scholar_userid: https://scholar.google.com/citations?user=gBlYdZwAAAAJ&hl=en&oi=ao # your Google Scholar ID
+scholar_userid: gBlYdZwAAAAJ # your Google Scholar ID
 orcid_id: 0000-0002-4828-0668 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
