--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ footer_text: >
 keywords: scRNAseq, comptuer science, machine learning, artifical intelligence  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 👨 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: icons8-man-technologist-96.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://george-hall.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
